fixed the white space issue in the graph for dimensions less than 768 px

--- a/style.css
+++ b/style.css
@@ -386,6 +386,7 @@ h3{
     border-left-width: 5px;
     border-left-color: black;
     border-left-style: solid;
+    padding-top: 20px;
 }
 
 #history-article{
@@ -509,12 +510,6 @@ h3{
     .big-letters {
         font-size: 55px;
     }
-
-    article {
-        padding: 20px;
-        max-width: 95vw;
-    }
-
     #paste-input, .list, #no-lists, #history-article {
         width: 100%;
         max-width: 100%;
@@ -645,9 +640,11 @@ h3{
         align-items: center;
         overflow: visible;
         position: relative;
+        padding: 20px;
+        box-sizing: border-box;
     }
     #history-article {
-        display: flex;
+        display: none;
         width: 90%;
         max-width: 610px;
         height: auto;
@@ -665,10 +662,9 @@ h3{
         object-fit: contain;
     }
     canvas {
-        width: 95%;
+        width: 100%;
         height: 100%;
         display: block;
-        object-fit: contain;
     }
     #count {
         display: flex;
@@ -727,7 +723,7 @@ h3{
         line-height: 1;
     }
     #accuracy-container {
-        width: 100%;
+        width: 30%;
         height: auto;
         aspect-ratio: 1 / 1;
         padding: 20px;
@@ -762,10 +758,9 @@ h3{
         box-sizing: border-box;
     }
     #history-canvas, canvas {
-        width: 90%;
+        width: 100%;
         height: 100%;
         display: block;
-        object-fit: contain;
     }
     #canvas-container {
         width: 100%;
@@ -774,9 +769,8 @@ h3{
         justify-content: center;
         align-items: center;
         min-height: 200px;
-        padding-top: 5px;
-        padding-bottom: 20px;
-        padding-left: 10px;
-        overflow: scroll;
+        padding: 20px;
+        overflow: hidden;
+        box-sizing: border-box;
     }
 }
